Sync with underscore-java