@@ -27,6 +27,8 @@ import java.io.File;
 import java.io.FileInputStream;
 import java.io.FileOutputStream;
 import java.io.IOException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.channels.Channels;
 import java.nio.channels.ReadableByteChannel;
@@ -1722,6 +1724,7 @@ public class U<T> extends Underscore<T> {
     private enum OperationType {
         GET,
         SET,
+        UPDATE,
         REMOVE
     }
 
@@ -1766,9 +1769,10 @@ public class U<T> extends Underscore<T> {
     @SuppressWarnings("unchecked")
     private static void checkSetAndRemove(
             Object value, OperationType operationType, Object savedLocalObject, String savedPath) {
-        if (operationType == OperationType.SET) {
+        if (operationType == OperationType.SET || operationType == OperationType.UPDATE) {
             if (savedLocalObject instanceof Map) {
-                ((Map) savedLocalObject).put(savedPath, value);
+                checkSetOrUpdate(
+                        value, operationType, (Map<String, Object>) savedLocalObject, savedPath);
             } else {
                 ((List) savedLocalObject).set(Integer.parseInt(savedPath), value);
             }
@@ -1778,6 +1782,18 @@ public class U<T> extends Underscore<T> {
             } else {
                 ((List) savedLocalObject).remove(Integer.parseInt(savedPath));
             }
+        }
+    }
+
+    private static void checkSetOrUpdate(
+            Object value,
+            OperationType operationType,
+            Map<String, Object> savedLocalObject,
+            String savedPath) {
+        if (operationType == OperationType.UPDATE && savedLocalObject.containsKey(savedPath)) {
+            savedLocalObject.put(Underscore.uniqueId(savedPath), value);
+        } else {
+            savedLocalObject.put(savedPath, value);
         }
     }
 
@@ -1834,6 +1850,15 @@ public class U<T> extends Underscore<T> {
     public static <T> T set(
             final Map<String, Object> object, final List<String> paths, Object value) {
         return baseGetOrSetOrRemove(object, paths, value, OperationType.SET);
+    }
+
+    public static <T> T update(final Map<String, Object> object, final String path, Object value) {
+        return update(object, stringToPath(path), value);
+    }
+
+    public static <T> T update(
+            final Map<String, Object> object, final List<String> paths, Object value) {
+        return baseGetOrSetOrRemove(object, paths, value, OperationType.UPDATE);
     }
 
     public static <T> T remove(final Map<String, Object> object, final String path) {
@@ -2025,8 +2050,9 @@ public class U<T> extends Underscore<T> {
         }
     }
 
-    public static long downloadUrl(final String url, final String fileName) throws IOException {
-        final URL website = new URL(url);
+    public static long downloadUrl(final String url, final String fileName)
+            throws IOException, URISyntaxException {
+        final URL website = new URI(url).toURL();
         try (ReadableByteChannel rbc = Channels.newChannel(website.openStream());
                 final FileOutputStream fos = new FileOutputStream(fileName)) {
             return fos.getChannel().transferFrom(rbc, 0, Long.MAX_VALUE);
@@ -2192,7 +2218,7 @@ public class U<T> extends Underscore<T> {
             final Integer connectTimeout,
             final Integer readTimeout) {
         try {
-            final java.net.URL localUrl = new java.net.URL(url);
+            final java.net.URL localUrl = new java.net.URI(url).toURL();
             final java.net.HttpURLConnection connection =
                     (java.net.HttpURLConnection) localUrl.openConnection();
             setupConnection(connection, method, headerFields, connectTimeout, readTimeout);
@@ -2222,7 +2248,7 @@ public class U<T> extends Underscore<T> {
                     responseCode,
                     connection.getHeaderFields(),
                     result);
-        } catch (java.io.IOException ex) {
+        } catch (java.io.IOException | java.net.URISyntaxException ex) {
             throw new UnsupportedOperationException(ex);
         }
     }
